Added theme color

--- a/public/css/template/custom.css
+++ b/public/css/template/custom.css
@@ -5,3 +5,7 @@
 	Overwriting Default Theme Styles for Better Handling Updates
 -----------------------------------------------------------------*/
 
+/* :root {
+	--cnvs-themecolor: #ff6600;
+	--cnvs-themecolor-rgb: 131, 179, 65;
+} */
